# rlox

./: Cargo.toml  README.md  test.lox
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  error.rs  lib.rs  main.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  env.rs  errors.rs  interpret.rs  lib.rs  parser.rs  parser_errors.rs  resolver.rs  statements.rs
crates/parser/src/ast/: expr.rs  fns.rs  mod.rs  stmts.rs
crates/parser/tests/: lib.rs  statements.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: constants.rs  errors.rs  lib.rs  scanner.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  token.rs  token_type.rs
