[workspace]
resolver = "2"
members = ["crates/cli", "crates/parser", "crates/scanner", "crates/types"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
interpreter-types = { path = "crates/types" }
parser = { path = "crates/parser" }
scanner = { path = "crates/scanner" }
thiserror = "2.0.18"

[workspace.metadata.scripts]
test-cli = "cargo test -p cli"
test-parser = "cargo test -p parser"
test-scanner = "cargo test -p scanner"
test-types = "cargo test -p types"
test-all = "cargo test --all"
