[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
autobins = false

[[bin]]
name = "codecrafters-interpreter"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
scanner = { workspace = true }
thiserror = { workspace = true }
